logger config updated